fix: harden release trust and native launch